# Vedic-Astrology

./: .gitignore  AI印度占星项目-调研与实施方案.md  ARCHITECTURE.md  DEPLOYMENT.md  LOCATION_FIX_NOTES.md  LOCATION_OPTIMIZATION_REQUIREMENTS.md  README.md  RUN_GUIDE.md  docker-compose.yml  package-lock.json  package.json  start.bat  start.sh  星盘生成与解析调用说明.md  项目总结报告.md
backend/: Dockerfile  pyproject.toml  requirements.txt  start_server.py  test_server.py
backend/app/: __init__.py  birth_time_rectifier_service.py  chart_archive_service.py  chart_reading_service.py  chart_service.py  env_loader.py  location_service.py  main.py  rectifier_dialogue_service.py  schemas.py
backend/data/: reference_data.sqlite3  reference_locations.json  reference_methods.json  reference_sources.json
backend/tests/: test_birth_chart_api.py  test_birth_time_rectifier_api.py  test_birth_time_rectifier_dialogue_api.py  test_chart_reading_api.py  test_chart_service_mapping.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/natal/: page.tsx
frontend/app/pricing/: page.tsx
frontend/components/: Footer.tsx  LanguageProvider.tsx  LanguageProviderWrapper.tsx  LanguageSwitcher.tsx  Navbar.tsx
frontend/tests/: home.test.tsx  natal.test.tsx
frontend/types/: index.ts  translations.ts
