[project]
name = "ai-vedic-astrology-api"
version = "0.1.0"
description = "FastAPI birth-chart service for the AI Vedic astrology MVP."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
    "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
astro = [
    "jyotishganit==0.1.2",
]
test = [
    "pytest>=9.0.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
